--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <form>
                 <!-- <label for="input">Add Number of pixels : </label> -->
-                   <input type="number" name = "pixel size" placeholder="enter pixels" class="input">
+                   <input type="number" name = "pixel size" placeholder="Enter Pixels" class="input">
                </form>
            
                <div id="favcolor">
